Make README a game README, move coursework contract to CLAUDE.md
README now covers the game itself — gameplay, features, controls,
requirements, running. The assignment contract, milestones, scope,
learning goals, and reference list move into CLAUDE.md.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JX8ioXYHVo1yu3UFNJFP6T